# Gemini-Code

./: .indexignore  README.md  pyproject.toml  rag_prompts.txt  run_agent.sh
src/: __init__.py  background_state.py  coding_agent.py  main.py  rag_setup.py  rag_tool.py  requirements.txt  state.py  utils.py
